--- a/src/components/Table.module.css
+++ b/src/components/Table.module.css
@@ -23,21 +23,23 @@
     border: 1px solid #ddd;
     padding: 8px;
     text-align: center;
-    padding-bottom: 2%;
-	padding-top: 2%;
-    padding-left:2%;
+    padding-bottom: 1%;
+	  padding-top: 1%;
+    padding-left: 1%;
   }
   
   .table th {
-    background-color: #f2f2f2;
+    background-color: #bebebe;
     cursor: pointer;
+    color: #000;
   }
   
   .table tr:nth-child(even) {
-    background-color: #323C50;
+    background-color: #2C3446;
   }
   
   .table tr:hover {
     background-color: #ddd;
+    color: #000;
   }
   
